manifests/api_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-api-service
spec:
  selector:
    app: time-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
