manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: time-api-ingress
  # namespace: time-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.mywonder.works
    secretName: letsencrypt-cert
  rules:
  - host: api.mywonder.works
    http:
      paths:
      - path: /time
        pathType: Prefix
        backend:
          service:
            name: time-api-service
            port:
              number: 80
